--- a/src/app/features/slection-evoting/proceed-evoting/proceed-evoting.component.scss
+++ b/src/app/features/slection-evoting/proceed-evoting/proceed-evoting.component.scss
@@ -12,7 +12,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 16px;
-  
+
   .text-center {
     display: flex;
     flex-direction: column;
@@ -21,7 +21,9 @@
     background-color: rgba(255, 255, 255, 0.95);
     padding: 32px;
     border-radius: 16px;
-    box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
+    box-shadow:
+      0 20px 25px -5px rgba(0, 0, 0, 0.1),
+      0 10px 10px -5px rgba(0, 0, 0, 0.04);
     backdrop-filter: blur(16px);
     min-width: 300px;
   }
@@ -41,7 +43,7 @@
 .scrollable-list::-webkit-scrollbar-thumb {
   background: linear-gradient(135deg, #3b82f6, #1d4ed8);
   border-radius: 10px;
-  
+
   &:hover {
     background: linear-gradient(135deg, #1d4ed8, #3b82f6);
   }
@@ -83,7 +85,7 @@
   .mdc-checkbox__background {
     border-color: #3b82f6 !important;
   }
-  
+
   .mdc-checkbox--selected .mdc-checkbox__background {
     background-color: #3b82f6 !important;
     border-color: #3b82f6 !important;
@@ -95,7 +97,7 @@
   .mat-mdc-form-field-outline {
     border-radius: 12px !important;
   }
-  
+
   .mat-mdc-form-field-focus-overlay {
     border-radius: 12px !important;
   }
